First Major Update
Added lots of stying, as well as buttons and navigation.
Created a color template for the whole site
Updated button styling
Created example Science and History folders.
Fixed the sidemenu back button issue from Login page.
Capitalized Login on Login Page.
Updated About page.
Added descriptions to several pages about what each should do.
There's this neat hover over color feature on the buttons, idk how to change that but I think it looks good

--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -13,11 +13,16 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="bg-style" padding>
     <h3>This app was created in Joseph Carlisle's Csci 458 Mobile Application Development Class</h3>
   
     <p>
       Produced in full by Taylor Smith and Joseph Jabour.
+    </p>
+
+    <p>
+      At the time of writing this, Joseph was in charge of color scheme 
+      and the creation of several pages, as well as some touching up
     </p>
   
   </ion-content>
