--- a/Project3/src/pages/home/home.html
+++ b/Project3/src/pages/home/home.html
@@ -1,4 +1,5 @@
 <ion-header>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -7,19 +8,33 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Welcome to Notecard++</h3>
+<ion-content class="bg-style" padding>
+  <h1><strong>Welcome to Notecard++</strong></h1>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    This is the home page. This is where we intend for the user to see all the folders
+    containing their various sets of sets of notecards.
   </p>
+  
+<!-- (click)="toCreate()"  -->
+  <button ion-button full large class="createCard" 
+  id="addfolder">New Folder
+  </button>
 
-  <button ion-button secondary menuToggle id="addfolder">See Side Menu</button>
+  <button ion-button full large class="folder" (click)="toScience()">
+    Science
+  </button>
+
+  <button ion-button full large class="folder" (click)="toHistory()">
+      History
+  </button>
 
 
   <ion-footer>
       <ion-toolbar>
-          <button id="about" ion-button (click)="toAbout()">Visit our About Page</button>
+          <button id="about" class="ion-button" ion-button
+           (click)="toAbout()">Visit our About Page
+          </button>
       </ion-toolbar>
   </ion-footer>
 
