--- a/Project3/src/pages/login/login.html
+++ b/Project3/src/pages/login/login.html
@@ -7,25 +7,26 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="bg-style" padding>
 
  <ion-item>
     <ion-label fixed>Username</ion-label>
     <ion-input type="text" value=""></ion-input>
   </ion-item>
-     <br/><br/>
+     <br/>
   <ion-item>
     <ion-label fixed>Password</ion-label>
     <ion-input type="password"></ion-input>
   </ion-item>
+  <br>
 <ion-buttons>
-  <button ion-button  block (click)="home()">
+  <button class="ion-button" ion-button  block (click)="home()">
     Submit
   </button>
 </ion-buttons>
