Fixed CreateCard links
Fixed the New Folder and Create Card links. They now redirect to the Create a Card Page

--- a/Project3/src/pages/create-card/create-card.html
+++ b/Project3/src/pages/create-card/create-card.html
@@ -29,17 +29,8 @@
     Begin creating notecards
   </p>
 
-  <button ion-button full large class="createCard" secondary (click)="toCreate()" 
+  <button ion-button full large class="createCard" secondary
   id="addfolder">Create a Card
   </button>
-
-
-  <ion-footer>
-      <ion-toolbar>
-          <button id="about" class="ion-button" ion-button
-           (click)="toAbout()">Visit our About Page
-          </button>
-      </ion-toolbar>
-  </ion-footer>
 
 </ion-content>
