--- a/Project3/src/pages/home/home.html
+++ b/Project3/src/pages/home/home.html
@@ -16,8 +16,7 @@
     containing their various sets of sets of notecards.
   </p>
   
-<!-- (click)="toCreate()"  -->
-  <button ion-button full large class="createCard" 
+  <button ion-button full large class="createCard"  (click)="toCreate()"
   id="addfolder">New Folder
   </button>
 
