--- a/Project3/src/pages/science/science.html
+++ b/Project3/src/pages/science/science.html
@@ -26,8 +26,7 @@
     This allow users more organization options.
   </p>
 
-  <!-- (click)="toCreate()" -->
-  <button ion-button full large class="createCard"  
+  <button ion-button full large class="createCard"  (click)="toCreate()"
   id="addfolder">Create Stack
   </button>
 
