--- a/Project3/src/pages/history/history.html
+++ b/Project3/src/pages/history/history.html
@@ -25,8 +25,7 @@
         This allow users more organization options.
       </p>
     
-      <!-- (click)="toCreate()" -->
-      <button ion-button full large class="createCard"  
+      <button ion-button full large class="createCard"  (click)="toCreate()"
       id="addfolder">Create Stack
       </button>
     
