Updated with Settings and new About
I added Taylor's Settings and updated About page and sstyled them along with everything else

--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -24,5 +24,10 @@
       At the time of writing this, Joseph was in charge of color scheme 
       and the creation of several pages, as well as some touching up
     </p>
+
+    <p>
+      Taylor was in charge of the creation of the Login and Settings pages 
+      and connecting both to the Homepage.
+    </p>
   
   </ion-content>
