--- a/Project3/src/pages/science/science.html
+++ b/Project3/src/pages/science/science.html
@@ -8,6 +8,9 @@
 
   <ion-navbar>
     <ion-title>Science</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
 
 </ion-header>
