--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -7,30 +7,32 @@
 <ion-header>
 
   <ion-navbar>
+  	
     <ion-title>About</ion-title>
-    <button ion-button menuToggle>
+     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content class="bg-style" padding>
-    <h3>This app was created in Joseph Carlisle's Csci 458 Mobile Application Development Class</h3>
-  
-    <p>
-      Produced in full by Taylor Smith and Joseph Jabour.
-    </p>
+<ion-content class="bg-style"padding>
+	<h3>This app was created in Joseph Carlisle's Csci 458 Mobile Application Development class </h3>
 
-    <p>
-      At the time of writing this, Joseph was in charge of color scheme 
-      and the creation of several pages, as well as some touching up
-    </p>
 
-    <p>
-      Taylor was in charge of the creation of the Login and Settings pages 
-      and connecting both to the Homepage.
-    </p>
-  
-  </ion-content>
+	<p>
+		Produced in full by Taylor Smith and Joseph Jabour.
+	</p>
+
+	<p>
+		At the time of writing this, Joseph was in charge of color scheme and creation of several pages, as well as some touching up
+	</p> 
+	
+
+	<p>
+		 Taylor was in charge of the creation of the Login and Settings pages and connecting both to the Homepage.
+         Taylor was in charge of creation of google authentication, alert to dynamically create note cards, and created a static note card.
+	</p> 
+
+
+</ion-content>
