--- a/Project3/src/pages/settings/settings.html
+++ b/Project3/src/pages/settings/settings.html
@@ -10,7 +10,7 @@
   	 <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Settings</ion-title>
+    <ion-title>Account Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,35 +18,44 @@
 
 <ion-content class="bg-style" padding>
 
-	<ion-list>
 
-    <ion-item>
+
+    <!--To Do: Display User's name -->
+
+    <!--To Do: make change password button work -->
+    <!-- Maybe make a separate page for it -->
+
+      <button full large ion-button class="ion-button">
+        Change Password
+      </button>
+
+      <br/>
+
+      <button full large ion-button (click)="logout()" class="ion-button">
+        Logout
+      </button>
+
+
+
+    <!-- <ion-item class="settings_list" no-lines>
         <h2>Brightness</h2>
-        <div>
-              Value: {{brightness}}
-        </div>
     </ion-item>
 
-    <ion-item>
+    <ion-item class="settings_list" no-lines> 
        <ion-range  min="0" max="100" [(ngModel)]="brightness">
           <ion-icon range-left small name="sunny"></ion-icon>
           <ion-icon range-right name="sunny"></ion-icon>
        </ion-range>
     </ion-item>
 
-    <ion-item>
+    <ion-item class="settings_list" no-lines>
          <h2>Volume</h2>
-        <div>
-              Sound: {{volume}}
-        </div>
     </ion-item>
 
-    <ion-item>
+    <ion-item class="settings_list" no-lines>
       <ion-range  min="0" max="100" [(ngModel)]="volume">
          <ion-icon range-left small name="volume-off"></ion-icon>
          <ion-icon range-right name="volume-up"></ion-icon>
       </ion-range>
-    </ion-item>
-
-  </ion-list>
+    </ion-item> -->
 </ion-content>
