--- a/Project3/src/pages/login/login.html
+++ b/Project3/src/pages/login/login.html
@@ -1,33 +1,84 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>Login</ion-title>
+
+
+     <ion-card *ngIf="google.loggedin">
+      <img src="{{google.ProfilePicture}}"/>
+      <ion-card-content>
+        <ion-card-title>
+          {{ google.name }}
+        </ion-card-title>
+        <p style="text-align: center">
+          {{ google.email }}
+        </p> 
+      </ion-card-content>
+    </ion-card>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content class="bg-style" padding>
+<ion-content class="bg-style"padding>
 
- <ion-item>
-    <ion-label fixed>Username</ion-label>
-    <ion-input type="text" value=""></ion-input>
-  </ion-item>
-     <br/>
   <ion-item>
-    <ion-label fixed>Password</ion-label>
-    <ion-input type="password"></ion-input>
+  	<ion-input type = "text" value="" placeholder="Email"></ion-input>
   </ion-item>
-  <br>
-<ion-buttons>
-  <button class="ion-button" ion-button  block (click)="home()">
-    Submit
-  </button>
-</ion-buttons>
+  <br/>
+
+  <ion-item>
+ 
+  	<ion-input type = "password" placeholder="Password"></ion-input>
+  </ion-item>
+  <br/>
+  <ion-buttons>
+
+    <button  class="ion-button"  *ngIf="!google.loggedin" ion-button block (click)="home()">
+      Login
+    </button>
+
+    <br/>
+
+    <button  class="ion-button" ion-button block (click)="createAccount()">
+      Create an Account
+    </button>
+
+    <br/>
+    <button class="googleButton" ion-button block icon-left outline *ngIf="!google.loggedin" (click)="googleSignin()">
+    <ion-icon name="logo-googleplus"></ion-icon>
+      Google Sign-in 
+    </button>
+
+  </ion-buttons>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBZtSDsDNmBYq5N9ZteUGynJFHBGoEeJ4U",
+    authDomain: "notecardplusplus.firebaseapp.com",
+    databaseURL: "https://notecardplusplus.firebaseio.com",
+    projectId: "notecardplusplus",
+    storageBucket: "notecardplusplus.appspot.com",
+    messagingSenderId: "530543939386"
+  };
+  firebase.initializeApp(config);
+
+  //  googleSignin(){
+
+  //   bass_provider = new firebase.auth.GoogleAuthProvider()
+  //   firebase.auth().signInWithPopup(bass_provider).then(function(result){
+  //        console.log(result)
+  //        console.log("success")
+  //   }).catch(function(err){
+  //        console.log(err)
+  //        console("fail")
+
+
+  //   })
+  // }
+</script>
+
 </ion-content>
