--- a/Project3/src/pages/login/login.html
+++ b/Project3/src/pages/login/login.html
@@ -23,24 +23,32 @@
 <ion-content class="bg-style"padding>
 
   <ion-item>
-  	<ion-input type = "text" value="" placeholder="Email"></ion-input>
+  	<ion-input type = "text" value="" placeholder="Email" [(ngModel)]="userstuff.email"></ion-input>
   </ion-item>
   <br/>
 
   <ion-item>
  
-  	<ion-input type = "password" placeholder="Password"></ion-input>
+  	<ion-input type = "password" placeholder="Password" [(ngModel)]="userstuff.password"></ion-input>
   </ion-item>
   <br/>
+  
   <ion-buttons>
+    
 
-    <button  class="ion-button"  *ngIf="!google.loggedin" ion-button block (click)="home()">
+    <button  class="ion-button login" ion-button block (click)="login(userstuff)">
       Login
+    </button>
+    
+    <br/>
+
+    <button  class="ion-button forgotPW" ion-button block (click)="forgot()">
+      Forgot your password?
     </button>
 
     <br/>
 
-    <button  class="ion-button" ion-button block (click)="createAccount()">
+    <button  class="ion-button createacnt" ion-button block (click)="createAccount()" color="red">
       Create an Account
     </button>
 
