About page and cleanup unused imports
Got rid of some unused imports and updated the about page for Joseph's additions

--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -25,7 +25,13 @@
 
     <p>
       At the time of writing this, Joseph was in charge of color scheme 
-      and the creation of several pages, as well as some touching up
+      and the creation of several pages, as well as some touching up.
+      <br/>
+      For Project 4, Joseph added email and password functionality for
+      creating an acount, matching it in the database for logging in, 
+      the forgot password feature to reset the password, and the 
+      create notecard database functionality. Joseph also made the button color
+      scheme on the login page.
     </p>
 
     <p>
