Added help to login page
I added a paragraph on the login page to tell the user to login twice, cuz that happens sometimes

--- a/Project3/src/pages/login/login.html
+++ b/Project3/src/pages/login/login.html
@@ -35,6 +35,8 @@
   
   <ion-buttons>
     
+    <p>If you know you logged in with correct information but came back to this page,
+    please try again once more</p>
 
     <button  class="ion-button login" ion-button block (click)="login(userstuff)">
       Login
@@ -83,8 +85,6 @@
   //   }).catch(function(err){
   //        console.log(err)
   //        console("fail")
-
-
   //   })
   // }
 </script>
