--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -37,6 +37,7 @@
     <p>
       Taylor was in charge of the creation of the Login and Settings pages 
       and connecting both to the Homepage.
+      Taylor was in charge of creation of google authentication, alert to dynamically create note cards, and created a static note card.
     </p>
   
   </ion-content>
