--- a/Project3/src/pages/home/home.html
+++ b/Project3/src/pages/home/home.html
@@ -13,19 +13,11 @@
 
   <p>
     This is the home page. This is where we intend for the user to see all the folders
-    containing their various sets of sets of notecards.
+    containing their various sets of notecards.
   </p>
   
   <button ion-button full large class="createCard"  (click)="toCreate()">
     New Folder
-  </button>
-
-  <button ion-button full large class="folder" (click)="toScience()">
-    Science
-  </button>
-
-  <button ion-button full large class="folder" (click)="toHistory()">
-      History
   </button>
 
 
