--- a/Project3/src/pages/about/about.html
+++ b/Project3/src/pages/about/about.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -17,27 +11,11 @@
 
 
 <ion-content class="bg-style" padding>
-    <h3>This app was created in Joseph Carlisle's Csci 458 Mobile Application Development Class</h3>
-  
-    <p>
-      Produced in full by Taylor Smith and Joseph Jabour.
-    </p>
 
     <p>
-      At the time of writing this, Joseph was in charge of color scheme 
-      and the creation of several pages, as well as some touching up.
-      <br/>
-      For Project 4, Joseph added email and password functionality for
-      creating an acount, matching it in the database for logging in, 
-      the forgot password feature to reset the password, and the 
-      create notecard database functionality. Joseph also made the button color
-      scheme on the login page.
+      This app was developed in full by Joseph Jabour and Taylor Smith, who at the time, 
+      were senior college students majoring in Computer Science taking a Mobile App Development class.  
     </p>
 
-    <p>
-      Taylor was in charge of the creation of the Login and Settings pages 
-      and connecting both to the Homepage.
-      Taylor was in charge of creation of google authentication, alert to dynamically create note cards, and created a static note card.
-    </p>
   
   </ion-content>
