--- a/Project3/src/pages/history/history.html
+++ b/Project3/src/pages/history/history.html
@@ -15,6 +15,12 @@
 
 </ion-header>
 
+<!-- ----------------------------------------------------- -->
+<!-- ----------------------------------------------------- -->
+<!-- THIS IS AN EXAMPLE PAGE, THE SAME AS THE HISTORY PAGE -->
+<!---- INTENDED TO BE DYNAMICALLY CREATED, BUT NEVER WAS ---->
+<!-- ----------------------------------------------------- -->
+<!-- ----------------------------------------------------- -->
 
 <ion-content class="bg-style" padding>
     <h2>
