--- a/Project3/src/pages/settings/settings.html
+++ b/Project3/src/pages/settings/settings.html
@@ -12,6 +12,9 @@
 
 <ion-content class="bg-style" padding>
 
+<!-- Intended for there to be a Night Mode button, never got around to it -->
+<!-- Not really sure what else needed to go here -->
+
       <button full large ion-button (click)="logout()" class="ion-button">
         Logout
       </button>
