--- a/Project3/src/pages/home/home.html
+++ b/Project3/src/pages/home/home.html
@@ -8,16 +8,23 @@
   </ion-navbar>
 </ion-header>
 
+<!-- This is at the top of every page to set the style of the pages made in src > app > app.scss -->
 <ion-content class="bg-style" padding>
+ 
   <h1><strong>Welcome to Notecard++</strong></h1>
 
-  <p>
-    This is the home page. This is where we intend for the user to see all the folders
-    containing their various sets of notecards.
-  </p>
   
   <button ion-button full large class="createCard"  (click)="toCreate()">
     New Folder
+  </button>
+
+  <!-- These are just examples of what we wanted to happen when the user made stacks -->
+  <button ion-button full large class="folder" (click)="toScience()">
+    Science
+  </button>
+
+  <button ion-button full large class="folder" (click)="toHistory()">
+      History
   </button>
 
 
