--- a/Project3/src/pages/login/login.html
+++ b/Project3/src/pages/login/login.html
@@ -38,29 +38,36 @@
     <p>If you know you logged in with correct information but came back to this page,
     please try again once more</p>
 
+    <!-- Logh in button -->
     <button  class="ion-button login" ion-button block (click)="login(userstuff)">
       Login
     </button>
     
     <br/>
 
+    <!-- Forgot password button -->
     <button  class="ion-button forgotPW" ion-button block (click)="forgot()">
       Forgot your password?
     </button>
 
     <br/>
 
+    <!-- Create account button -->
     <button  class="ion-button createacnt" ion-button block (click)="createAccount()" color="red">
       Create an Account
     </button>
 
     <br/>
+
+    <!-- Google sign in button -->
     <button class="googleButton" ion-button block icon-left outline *ngIf="!google.loggedin" (click)="googleSignin()">
     <ion-icon name="logo-googleplus"></ion-icon>
       Google Sign-in 
     </button>
 
   </ion-buttons>
+
+
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
