--- a/Project3/src/pages/science/science.html
+++ b/Project3/src/pages/science/science.html
@@ -14,7 +14,12 @@
   </ion-navbar>
 
 </ion-header>
-
+<!-- ----------------------------------------------------- -->
+<!-- ----------------------------------------------------- -->
+<!-- THIS IS AN EXAMPLE PAGE, THE SAME AS THE HISTORY PAGE -->
+<!---- INTENDED TO BE DYNAMICALLY CREATED, BUT NEVER WAS ---->
+<!-- ----------------------------------------------------- -->
+<!-- ----------------------------------------------------- -->
 
 <ion-content class="bg-style" padding>
 
