Revert "Removed a thing"
This reverts commit f30ec9ddc309dcc3b9c8e6fec410e1254dcab867.

--- a/Project3/src/pages/home/home.html
+++ b/Project3/src/pages/home/home.html
@@ -10,6 +10,11 @@
 
 <ion-content class="bg-style" padding>
   <h1><strong>Welcome to Notecard++</strong></h1>
+
+  <p>
+    This is the home page. This is where we intend for the user to see all the folders
+    containing their various sets of notecards.
+  </p>
   
   <button ion-button full large class="createCard"  (click)="toCreate()">
     New Folder
