--- a/Project3/src/pages/history/history.html
+++ b/Project3/src/pages/history/history.html
@@ -17,7 +17,7 @@
 
 <!-- ----------------------------------------------------- -->
 <!-- ----------------------------------------------------- -->
-<!-- THIS IS AN EXAMPLE PAGE, THE SAME AS THE HISTORY PAGE -->
+<!-- THIS IS AN EXAMPLE PAGE, THE SAME AS THE SCIENCE PAGE -->
 <!---- INTENDED TO BE DYNAMICALLY CREATED, BUT NEVER WAS ---->
 <!-- ----------------------------------------------------- -->
 <!-- ----------------------------------------------------- -->
